--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img src="./assets/imagens/img3.jpg" alt="">
                 <h3>Jonas Moura</h3>
                 <p class="skil">Web Designer</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto ipsa commodi dolor non est dolorem quasi facilis quo beatae nam nostrum</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto ipsa commodi dolor non est dolorem quasi facilis quo beatae am nostrum</p>
                 <button class="btn">Saber mais</button>
             </div>
         </div>
